Sat Apr 24 13:28:13 PDT 1999 Manish Singh <yosh@gimp.org>

	* app/layer_cmds.[ch]: pdbgened, header file removed

	* app/internal_procs.c: use pdbgen register for layer funcs

	* app/*_cmds.c: various pdbgen formatting fixes

	* app/Makefile.am: removed layer_cmds.h

	* app/layer.c
	* app/layerF.h: changed AddMaskType enum to capitals

Sat Apr 24 11:30:34 1999  ape@lrdpf.spacetec.no  (Asbjorn Pettersen)

	* app/plug_in.c (plug_in_open): Add OS/2 patches. Setting pipes
	in binary mode.

	* libgimp/gimpenv.c (gimp_data_directory): Set gimp_data_dir (OS/2).

	* libgimp/gimp.c (set_gimp_PLUG_IN_INFO): Set the PLUG_IN_INFO
	structure in a normal way (at run-time). 
	The UNIX PLUG_IN_INFO is set at linking time!

	The read/writechannel is set in BINARY mode (OS/2 version). 

	* libgimp/gimp.h (MAIN): Add MAIN macro for OS/2 plugins.

1999-04-24  Michael Natterer  <mitschel@cs.tu-berlin.de>

	* app/bucket_fill.c: added a "BG Color Fill" radio button.
	Toggling FG/BG with <shift> works in both color fill modes now.

	* app/brush_select.c: session management sets the size of the
	dialog again (depending on the current paint options mode because
	bad things happen if the brush preview's size is reduced beyond
	it's minimum).

Thu Apr 22 22:14:02 PDT 1999 Manish Singh <yosh@gimp.org>

	* app/gimpdrawable.c: gave parasite undo a MISC_UNDO class for now
	so it compiles

	* app/tools_cmds.c: fix crop invoker to give correct args to 
	crop_image

	* app/color_cmds.c: s/GRAY/GRAY_LUT/g;

	* app/brush_select.[ch]: removed PDB procs, export brush_active_dialogs,
	brush_select_dialog, s/active_dialogs/brush_active_dialogs/

	* app/gimage_cmds.[ch]
	* app/channel_ops.[ch]: removed channel ops PDB procs, moved duplicate
	function from gimage_cmds to channel_ops, export offset and duplicate

	* app/gimpbrushlist.[ch]: removed PDB procs

	* app/gradient.[ch]: removed PDB procs,

	* app/gradient_header.h: exported G_SAMPLE, GradSelect, num_gradients,